--- a/MathGraphic/MathGraphic.csproj
+++ b/MathGraphic/MathGraphic.csproj
@@ -106,6 +106,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="2.html" />
+    <Content Include="ball.js" />
     <Content Include="index.html" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
